Bug 444892 - General option in settings has no icon
Summary: General option in settings has no icon
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Android 11.x
: NOR minor
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-03 16:59 UTC by Shubham Arora
Modified: 2021-11-04 14:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
General Settings no icon (38.03 KB, image/jpeg)
2021-11-03 16:59 UTC, Shubham Arora
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shubham Arora 2021-11-03 16:59:21 UTC
Created attachment 143176 [details]
General Settings no icon

SUMMARY
General option in settings has no icon

STEPS TO REPRODUCE
1. Open Settings

OBSERVED RESULT
General option in settings has no icon.

SOFTWARE/OS VERSIONS
Android 11
Comment 1 bart 2021-11-04 14:38:52 UTC
Git commit 214394aae7d641635395123c6c21f8124747e112 by Bart De Vries.
Committed on 04/11/2021 at 14:38.
Pushed by bdevries into branch 'master'.

Fix kasts icon on android

Also fix a minor compiler warning (mentioned during android build)

M  +1    -1    src/qml/Settings/SettingsPage.qml
M  +1    -1    src/storagemanager.cpp

https://invent.kde.org/plasma-mobile/kasts/commit/214394aae7d641635395123c6c21f8124747e112