Fix kasts icon on android

Also fix a minor compiler warning (mentioned during android build)

BUG: 444892